deployment/argo-cd/base/argo-cd.ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: argo-cd
  labels:
    istio-injection: enabled
