deployment/argo-cd/base/argo-cd.istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd
spec:
  hosts:
    - argo-cd.int.anhdle14.me
  gateways:
    - istio-system/gateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: argocd-server
